platform/identity/keycloak/manifests/reachability.template.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: keycloak
  namespace: ${NAMESPACE}
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`${KEYCLOAK_HOST}`)
      services:
        - name: ${KEYCLOAK_RELEASE}-keycloakx-http
          port: 8443
  tls:
    passthrough: true
